--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 class="subtitle">Attualmente in costruzione. Stiamo <br> aggiungendo gli ultimi ritocchi.</h2>
         </div>
         <button class="notificami">Aggiornami</button>
-        <a href="https://wwww.instagram.com/alessandracrimi_">
+        <a href="https://www.instagram.com/alessandracrimi_">
             <ion-icon name="logo-instagram" style="font-size: 2em;" class="icon"></ion-icon>
         </a>
         </header>
